# Whisper.cpp

./: README.md  local.properties.template  settings.gradle  setup.sh
.github/workflows/: main.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni.cpp
app/src/main/java/com/example/whisperapp/: AudioRecorder.kt  MainActivity.kt  TranscriptionViewModel.kt  WhisperLib.kt
app/src/main/res/drawable/: ic_audio_file.xml  ic_clear.xml  ic_copy.xml  ic_folder.xml  ic_info.xml  ic_mic.xml  ic_share.xml  ic_stop.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml  themes.xml
